# libexplain

./: LICENSE  README
libexplain-1.4/: BUILDING  Makefile.in  README  aegis.conf  configure  libexplain.spec
libexplain-1.4/aegis.conf.d/: aede-policy  aemakegen  aesvt  architecture  cook  diff  html  integrate_pass_notify_command  merge  template  test
libexplain-1.4/cat/: main.c
libexplain-1.4/catalogue/: accept  accept4  access  acct  acl_from_text  acl_get_fd  acl_get_file  acl_set_fd  acl_set_file  acl_to_text  adjtime  adjtimex  asprintf  bind  c  calloc  chdir  chmod  chown  chroot  close  closedir  connect  creat  dirfd  dup  dup2  endgrent  eventfd  execlp  execv  execve  execvp  fchdir  fchmod  fchown  fchownat  fclose  fcntl  fdopen  (+191 more)
libexplain-1.4/catalogue-ioctl/: asm_ioctls  bits_ioctl_types  bits_ioctls  linux_blktrace_api  linux_cciss_ioctl  linux_cdrom  linux_cm206  linux_cyclades  linux_dm_ioctl  linux_ext2_fs  linux_fs  linux_hdreg  linux_if_eql  linux_lp  linux_suspend_ioctls  linux_vt  mtio  scsi_scsi_ioctl  sound_sscape_ioctl  sys_mtio
libexplain-1.4/codegen/: aegis.c  aegis.h  boolean.c  boolean.h  catalogue.c  catalogue.h  elastic_buffer.c  elastic_buffer.h  generate.c  generate.h  get_user_name.c  get_user_name.h  gram.h  gram.y  header.c  header.h  ioctl_scan.c  ioctl_scan.h  main.c  node.c  node.h  wrapper.c  wrapper.h
libexplain-1.4/debian/: changelog  control  copyright  explain.install  libexplain-dev.install  libexplain-doc.doc-base  libexplain-doc.install  libexplain51.install  rules  watch
libexplain-1.4/etc/: apt-get-depends.cook  autoconf.cook  building.man  check-tarball.sh  check_ioctl_data_type.awk  configure.ac  configured.awk  coverage.sh  deb-cop-fix.awk  debian-package.sh  documentation.cook  doxygen.cfg  doxygen.cook  freshmeat.roff  groff.sh  howto.conf.in  howto.cook  howto_debian_upload.txt  howto_fedora_qemu.txt  howto_solaris_qemu.txt  i18n.cook  large.awk  lsb-release.awk  makefile-tail  makefile.cook  manually-confirmed.po  metrics.cook  new.sh  new_system_call.man  page-list.awk  ppa-upload.sh  readme.man  ref-ptx.sh  reference.man  tags.cook  v4l2-chip-ident.sh  xgettext-postprocess.sh
libexplain-1.4/etc/template/: c  generic  h  html  lib_ac_h  lib_buf_c  lib_buf_ec  lib_buf_eh  lib_buf_h  lib_c  lib_generic  lib_h  lib_ioc_c  lib_ioc_h  main_c  man  man3  ms  sh  test
libexplain-1.4/explain/: main.c  syscall.c  syscall.h
libexplain-1.4/explain/syscall/: accept.c  accept.h  accept4.c  accept4.h  access.c  access.h  acct.c  acct.h  acl_from_text.c  acl_from_text.h  acl_get_fd.c  acl_get_fd.h  acl_get_file.c  acl_get_file.h  acl_set_fd.c  acl_set_fd.h  acl_set_file.c  acl_set_file.h  acl_to_text.c  acl_to_text.h  adjtime.c  adjtime.h  adjtimex.c  adjtimex.h  asprintf.h  bind.c  bind.h  calloc.c  calloc.h  chdir.c  chdir.h  chmod.c  chmod.h  chown.c  chown.h  chroot.c  chroot.h  close.c  close.h  closedir.c  (+403 more)
libexplain-1.4/fixme-html/: main.c
libexplain-1.4/ioctl-scan/: iocontrol.c  iocontrol.h  main.c  probe.c  probe.h  report.c  report.h  scan.c  scan.h
libexplain-1.4/ioctl-scan/report/: semi_auto.c
libexplain-1.4/ioctl-scan/scan/: asm_ioctls.c  asm_ioctls.h  linux_cdrom.c  linux_cdrom.h  linux_ext2_fs.c  linux_ext2_fs.h  linux_fs.c  linux_fs.h  linux_hdreg.c  linux_hdreg.h  linux_lp.c  linux_lp.h  linux_vt.c  linux_vt.h  sys_mtio.c  sys_mtio.h
libexplain-1.4/libdir/pkgconfig/: libexplain.pc.in
libexplain-1.4/man/man1/: explain.1  explain_lca2010.1  explain_license.1
libexplain-1.4/man/man3/: explain.3  explain_accept.3  explain_accept4.3  explain_accept4_or_die.3  explain_accept_or_die.3  explain_access.3  explain_access_or_die.3  explain_acct.3  explain_acct_or_die.3  explain_acl_from_text.3  explain_acl_from_text_or_die.3  explain_acl_get_fd.3  explain_acl_get_fd_or_die.3  explain_acl_get_file.3  explain_acl_get_file_or_die.3  explain_acl_set_fd.3  explain_acl_set_fd_or_die.3  explain_acl_set_file.3  explain_acl_set_file_or_die.3  explain_acl_to_text.3  explain_acl_to_text_or_die.3  explain_adjtime.3  explain_adjtime_or_die.3  explain_adjtimex.3  explain_adjtimex_or_die.3  explain_asprintf.3  explain_asprintf_or_die.3  explain_bind.3  explain_bind_or_die.3  explain_calloc.3  explain_calloc_or_die.3  explain_chdir.3  explain_chdir_or_die.3  explain_chmod.3  explain_chmod_or_die.3  explain_chown.3  explain_chown_or_die.3  explain_chroot.3  explain_chroot_or_die.3  explain_close.3  (+428 more)
libexplain-1.4/po/: de.po  libexplain.pot
libexplain-1.4/script/: test_prelude.sh.in
libexplain-1.4/test/00/: t0001a.sh  t0002a.sh  t0003a.sh  t0004a.sh  t0005a.sh  t0006a.sh  t0007a.sh  t0008a.sh  t0009a.sh  t0010a.sh  t0011a.sh  t0012a.sh  t0013a.sh  t0014a.sh  t0015a.sh  t0016a.sh  t0017a.sh  t0018a.sh  t0019a.sh  t0020a.sh  t0021a.sh  t0022a.sh  t0023a.sh  t0024a.sh  t0025a.sh  t0026a.sh  t0027a.sh  t0028a.sh  t0029a.sh  t0030a.sh  t0031a.sh  t0032a.sh  t0033a.sh  t0034a.sh  t0035a.sh  t0036a.sh  t0037a.sh  t0038a.sh  t0039a.sh  t0040a.sh  (+57 more)
libexplain-1.4/test/01/: t0100a.sh  t0101a.sh  t0102a.sh  t0103a.sh  t0104a.sh  t0105a.sh  t0107a.sh  t0108a.sh  t0109a.sh  t0110a.sh  t0111a.sh  t0112a.sh  t0113a.sh  t0114a.sh  t0115a.sh  t0116a.sh  t0117a.sh  t0118a.sh  t0119a.sh  t0120a.sh  t0121a.sh  t0122a.sh  t0123a.sh  t0124a.sh  t0125a.sh  t0126a.sh  t0127a.sh  t0128a.sh  t0129a.sh  t0130a.sh  t0131a.sh  t0132a.sh  t0133a.sh  t0134a.sh  t0135a.sh  t0136a.sh  t0137a.sh  t0138a.sh  t0139a.sh  t0140a.sh  (+58 more)
libexplain-1.4/test/02/: t0200a.sh  t0201a.sh  t0202a.sh  t0203a.sh  t0204a.sh  t0205a.sh  t0206a.sh  t0207a.sh  t0208a.sh  t0209a.sh  t0210a.sh  t0211a.sh  t0212a.sh  t0213a.sh  t0214a.sh  t0215a.sh  t0216a.sh  t0217a.sh  t0218a.sh  t0219a.sh  t0220a.sh  t0221a.sh  t0222a.sh  t0223a.sh  t0224a.sh  t0225a.sh  t0226a.sh  t0227a.sh  t0228a.sh  t0229a.sh  t0230a.sh  t0231a.sh  (+68 more)
libexplain-1.4/test_config/: configured.h
libexplain-1.4/web-src/: bg.png.uue  books.png.uue  index.html  knot1.png.uue  knot2.png.uue  libexplain.png.uue  module.cook  orrery1.png.uue  sf.png.uue  watch1.png.uue  watch2.png.uue  watch3.png.uue
(+610 files in other folders)
